# h-cookiecutter-pypackage

./: .cookiecutter.json  .coveragerc  .isort.cfg  .pylintrc  MANIFEST.in  Makefile  README.md  cookiecutter.json  pytest.ini  requirements.test.txt  requirements.txt  setup.cfg  setup.py  setup_extra.py  tox.ini
.github/workflows/: pythonpackage.yml
hooks/: post_gen_project.py
src/h_cookiecutter_pypackage/: data_missing.txt  data_present.txt  dummy.py
tests/: .pylintrc
tests/integration/: build_test.py  conftest.py  sanity_test.py  test_build.py  test_sanity.py
tests/unit/: conftest.py  sanity_test.py
{{ cookiecutter.project_slug }}/: .coveragerc  .isort.cfg  .pydocstyle  MANIFEST.in  Makefile  README.md  requirements.test.txt  setup.cfg  setup.py  setup_extra.py  tox.ini
{{ cookiecutter.project_slug }}/.github/workflows/: pythonpackage.yml
{{ cookiecutter.project_slug }}/tests/: .pydocstyle  .pylintrc  patch.py
{{ cookiecutter.project_slug }}/tests/integration/: conftest.py
{{ cookiecutter.project_slug }}/tests/unit/: conftest.py
